# granola-coach

./: .env.example  .gitignore  .prompt.example  LICENSE  README.md  ai_analyzer.py  analyze_meetings.py  email_sender.py  granola_client.py  install.sh  pyproject.toml  test_granola_processor.py  uninstall.sh
